<resources>
    <string name="app_name">James Brewing Calculators</string>
    <string name="abvogfg">ABV from OG and FG</string>
    <string name="title">Brewing Calculators</string>
    <string name="og">Original gravity</string>
    <string name="fg">Final gravity</string>
    <string name="abv">ABV</string>
    <string name="og_default">1.050</string>
    <string name="fg_default">1.010</string>
    <string name="decimal_point">.</string>
    <string name="abvsgbrix">ABV from SG and Brix</string>
    <string name="sg">Specific Gravity</string>
    <string name="brix">Brix</string>
    <string name="brix_default">8.0</string>
    <string name="grain">Grain Temperature</string>
    <string name="target">Target Temperature</string>
    <string name="ratio">Water to Grain Ratio</string>
    <string name="strike_temp">Strike Water Temperature</string>
    <string name="grain_default">50</string>
    <string name="target_default">150</string>
    <string name="ratio_default">1.4</string>
    <string name="og_invalid">Invalid OG</string>
    <string name="fg_invalid">Invalid FG</string>
    <string name="sg_invalid">Invalid SG</string>
    <string name="brix_invalid">Invalid Brix</string>
    <string name="percent">%</string>
    <string name="grain_invalid">Invalid grain temperature</string>
    <string name="target_invalid">Invalid target temperature</string>
    <string name="ratio_invalid">Invalid ratio</string>
</resources>