<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ABVOGFGActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="317dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/abvogfg"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:labelFor="@id/editTextNumberOG"
        android:layout_width="164dp"
        android:layout_height="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/og"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/editTextNumberOG"
        android:layout_width="96dp"
        android:layout_height="44dp"
        android:layout_marginTop="4dp"
        android:inputType="numberDecimal"
        android:text="@string/og_default"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textViewFG"
        android:labelFor="@id/editTextNumberFG"
        android:layout_width="169dp"
        android:layout_height="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/fg"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberOG" />

    <EditText
        android:id="@+id/editTextNumberFG"
        android:layout_width="96dp"
        android:layout_height="44dp"
        android:layout_marginTop="4dp"
        android:inputType="numberDecimal"
        android:text="@string/fg_default"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFG" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="250dp"
        android:layout_height="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/abv"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberFG" />

    <TextView
        android:id="@+id/textViewABV"
        android:layout_width="250dp"
        android:layout_height="28dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewResult" />
</androidx.constraintlayout.widget.ConstraintLayout>
