<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ABVSGBrixActivity">

<TextView
    android:id="@+id/textViewTitle"
    android:layout_width="350dp"
    android:layout_height="50dp"
    android:layout_marginTop="32dp"
    android:text="@string/abvsgbrix"
    android:textAlignment="center"
    android:textSize="30sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/textViewOG"
    android:layout_width="300dp"
    android:layout_height="39dp"
    android:layout_marginTop="32dp"
    android:text="@string/sg"
    android:textAlignment="center"
    android:textSize="24sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

<EditText
    android:id="@+id/editTextSG"
    android:layout_width="96dp"
    android:layout_height="48dp"
    android:layout_marginTop="28dp"
    android:ems="10"
    android:inputType="numberDecimal"
    android:text="@string/fg_default"
    android:textAlignment="center"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textViewOG"
    tools:text="1.050" />

<TextView
    android:id="@+id/textViewBrix"
    android:layout_width="169dp"
    android:layout_height="39dp"
    android:layout_marginTop="28dp"
    android:text="@string/brix"
    android:textAlignment="center"
    android:textSize="24sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.491"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/editTextSG" />

<EditText
    android:id="@+id/editTextBrix"
    android:layout_width="96dp"
    android:layout_height="48dp"
    android:layout_marginTop="16dp"
    android:ems="10"
    android:inputType="numberDecimal"
    android:text="@string/brix_default"
    android:textAlignment="center"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textViewBrix" />

<TextView
    android:id="@+id/textViewABV"
    android:layout_width="250dp"
    android:layout_height="46dp"
    android:layout_marginTop="32dp"
    android:textAlignment="center"
    android:textSize="24sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/editTextBrix" />
</androidx.constraintlayout.widget.ConstraintLayout>