<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ABVOGFGActivity">

<TextView
    android:id="@+id/textView4"
    android:layout_width="317dp"
    android:layout_height="50dp"
    android:layout_marginTop="32dp"
    android:text="@string/abvogfg"
    android:textAlignment="center"
    android:textSize="30sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/textView"
    android:layout_width="164dp"
    android:layout_height="39dp"
    android:layout_marginTop="32dp"
    android:text="@string/og"
    android:textAlignment="center"
    android:textSize="24sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView4" />

<EditText
    android:id="@+id/editTextNumberDecimal"
    android:layout_width="96dp"
    android:layout_height="48dp"
    android:layout_marginTop="28dp"
    android:ems="10"
    android:inputType="numberDecimal"
    android:text="@string/og_default"
    android:textAlignment="center"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView"
    tools:text="1.050" />

<TextView
    android:id="@+id/textView3"
    android:layout_width="169dp"
    android:layout_height="39dp"
    android:layout_marginTop="28dp"
    android:text="@string/fg"
    android:textAlignment="center"
    android:textSize="24sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.491"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal" />

<EditText
    android:id="@+id/editTextNumberDecimal3"
    android:layout_width="96dp"
    android:layout_height="48dp"
    android:layout_marginTop="16dp"
    android:ems="10"
    android:inputType="numberDecimal"
    android:text="@string/fg_default"
    android:textAlignment="center"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView3" />

<TextView
    android:id="@+id/textView6"
    android:layout_width="250dp"
    android:layout_height="46dp"
    android:layout_marginTop="32dp"
    android:textAlignment="center"
    android:textSize="24sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal3" />
</androidx.constraintlayout.widget.ConstraintLayout>
